# GameDetection

./: .gitignore  CMakeLists.txt  library.cpp  main.c  main.cpp  matrix.c  model.h  perceptron.c
GD_cpp_lib/: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
GD_cpp_lib/inc/: linear_model.h  mlp_model.h  mlp_modelV2.h
GD_cpp_lib/src/: histo.cpp  mlp_model.cpp  mlp_modelV2.cpp
GD_cpp_linear_model/: CMakeLists.txt  linear_model.h  main.cpp
GD_cpp_linear_model/src/: linear_model.cpp
GD_cuda_lib/: CMakeLists.txt  main.cu  mlp_model.cuh  vector_operator.cuh
GD_cuda_lib/src/: host_mlp_model.cu  mlp_model.cu  vector_operator.cu
GD_linear_model/: .gitignore  CMakeLists.txt  linear_model.h  main.cpp
GD_linear_model/src/: linear_model.cpp
GD_python/: main.py
GD_python/notebooks/: Cas de Tests pour le rendu 2.ipynb  [Exemple] Classification Linéaire en Python.ipynb  [Exemple] Perceptron Multi Couche en python.ipynb
inc/: linear_model.h  matrix.h  mlp_model.h  model.h
src/: linear_model.cpp  matrix.c  mlp_model.cpp  model.c  model.cpp
